force-app/main/default/objects/Competitor__c/Competitor__c.object-meta.xml
<CustomObject>
    <description>Information regarding competitor information of a prospect or a customer. i.e, product, product type, contract dates and value</description>
    <label>Competitor</label>
    <nameField>
        <displayFormat>CM-{00000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>