force-app/main/default/objects/Competitor__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Prospect or Customer Account this is related to., Master Detail to enable Roll-Up summary of data to Account level. Such as, count of competitors, sum of contract value etc</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Competitors</relationshipLabel>
    <relationshipName>Competitors</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>