force-app/main/default/objects/Competitor__c/fields/Competitor__c.field-meta.xml
<CustomField>
    <fullName>Competitor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Please add in the competitor here, if it doesn&apos;t exist create the account</description>
    <inlineHelpText>Please add in the competitor here, if it doesn&apos;t exist create the account</inlineHelpText>
    <label>Competitor Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Competitors (Competitor)</relationshipLabel>
    <relationshipName>Competitors1</relationshipName>
    <type>Lookup</type>
</CustomField>