force-app/main/default/objects/Competitor__c/fields/Competitor_Product__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Shows which product is related to this competitor record</description>
    <label>Competitor Product</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Competitor_Product__c.Competitor_Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.Competitor__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Competitor_Product__c</referenceTo>
    <relationshipLabel>Competitors</relationshipLabel>
    <relationshipName>Competitors</relationshipName>
    <type>Lookup</type>
</CustomField>