force-app/main/default/objects/Competitor__c/fields/Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_End_Date__c</fullName>
    <description>If known the end date of the contract should be inserted here</description>
    <inlineHelpText>If known the end date of the contract should be inserted here, otherwise please provide an approximate date.</inlineHelpText>
    <label>Contract End Date (approx.)</label>
    <type>Date</type>
</CustomField>