force-app/main/default/objects/Competitor__c/fields/Contract_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Start_Date__c</fullName>
    <description>If known the start date of the contract should be inserted here</description>
    <inlineHelpText>If known the start date of the contract should be inserted here</inlineHelpText>
    <label>Contract Start Date</label>
    <type>Date</type>
</CustomField>