force-app/main/default/objects/Competitor__c/fields/Contract_Value__c.field-meta.xml
<CustomField>
    <fullName>Contract_Value__c</fullName>
    <description>If known then the contract value should be inserted here</description>
    <inlineHelpText>If known then the contract value should be inserted here</inlineHelpText>
    <label>Contract Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>