force-app/main/default/objects/Competitor__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Any supporting notes about this record</description>
    <inlineHelpText>Any supporting notes about this record</inlineHelpText>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>